Fixed Console to not ignore empty lines and properly wrap long strings (#220)

--- a/src/app/css/editor.css
+++ b/src/app/css/editor.css
@@ -362,7 +362,10 @@ pre {
 
 .WebTerm .container {
     overflow-y: auto !important;
+    overflow-x: hidden !important;
     padding: 9px !important;
+    word-wrap: break-word !important;
+    overflow-wrap: break-word !important;
 }
 
 .WebTerm .container ::selection {
